--- a/Day-6/index.html
+++ b/Day-6/index.html
@@ -5,5 +5,35 @@
     </head>
     <body>
         <iframe src="https://www.awdiz.in/"></iframe>
+        <form>
+            <fieldset>
+                <legend>Login page</legend>
+                <label>Email:</label><br/>
+                <input type="email" required/>
+                <label>Password:</label><br/>
+                <input type="password" minlength="8" maxlength="12"/><br>
+                <input type="submit" value="Login"/>
+                
+            </fieldset>
+        </form>
+        <form>
+            <label> fav Subject</label>
+            <input type="checkbox"/>
+            <label>science</label>
+            <input type="checkbox"/>
+            <label>maths</label>
+            <input type="checkbox"/>
+            <label>english</label>
+            <input type="checkbox"/>
+            <label>social studies</label><br/>
+            
+        </form>
+        <form>
+            <p>choose your gender</p>
+            <input type="radio" id="male" value="male" name="choose_gender"/>
+            <label for="male">Male</label><br>
+            <input type="radio" id="female" value="female" name="choose_gender"/>
+            <label for="female">Female</label>
+        </form>
     </body>
 </html>
