--- a/Test2/test2.html
+++ b/Test2/test2.html
@@ -49,7 +49,7 @@
         <textarea rows="5"></textarea><br/>
         <button>Submit</button>
     </section><br/>
-    <footer>
+    <footer style="border: 2px solid palevioletred; text-align: center;">
         adepchandu22@gmail.com
     </footer>
 
