--- a/Day-10/index.html
+++ b/Day-10/index.html
@@ -10,21 +10,21 @@
     <p style="text-decoration-color: brown; 
     text-decoration-line: underline; 
     text-decoration-thickness:4px ;
-    text-decoration-style:dotted ;">This is testing of Text-Decoration  </p>
-    <span class="material-symbols-outlined">home</span>
+    text-decoration-style:dotted ;">This is testing of Text-Decoration  </p><hr>
+    <span class="material-symbols-outlined">home</span><span>Home</span>
     <p style="text-transform: lowercase;">This is Testing of Text Transformation</p>
     <p style="text-transform: uppercase;">This is Testing of Text Transformation</p>
-    <p style="text-transform: capitalize;">This is Testing of Text Transformation</p>
+    <p style="text-transform: capitalize;">This is Testing of Text Transformation</p><hr>
     <span class="material-symbols-outlined">
         check_circle
-        </span>
+        </span><span>Circle</span>
     <p style="text-indent: 40px; letter-spacing: 3px; word-spacing: 4px; line-height: 30px;">HyperText Markup Language (HTML) is the standard markup language for documents designed to be displayed in a web browser. It defines the content and structure of web content. It is often assisted by technologies such as Cascading Style Sheets (CSS) and scripting languages such as JavaScript.</p>
-    <p style="white-space: nowrap;">HyperText Markup Language (HTML) is the standard markup language for documents designed to be displayed in a web browser. It defines the content and structure of web content. It is often assisted by technologies such as Cascading Style Sheets (CSS) and scripting languages such as JavaScript.</p>
+    <p style="white-space: nowrap;">HyperText Markup Language (HTML) is the standard markup language for documents designed to be displayed in a web browser. It defines the content and structure of web content. It is often assisted by technologies such as Cascading Style Sheets (CSS) and scripting languages such as JavaScript.</p><hr>
     <p style="text-shadow: 10px 10px; font-style: italic;">Testing of text shadow</p>
     <p style="font-weight: bold;">Testing for font weight</p>
     <p style="font-weight: 400;">Testing for font weight</p>
     <p style="font-weight: lighter;">Testing for font weight</p>
-    <p style="font-weight: bolder;">Testing for font weight</p>
+    <p style="font-weight: bolder;">Testing for font weight</p><hr>
     
     <p style="font-variant: small-caps">Testing Font Varient</p>
     <p style="font-size: 30px">Testing Font Size</p>
