--- a/Day-13/index.html
+++ b/Day-13/index.html
@@ -69,12 +69,17 @@
             width: 8%;
             background-color: #e6e6e6;
             display: flex;
+            
             align-items: center;
             height: 100%;
-            
+            border-top-left-radius: 2px;
+            border-bottom-left-radius: 2px;
         }
         #allsecp{
             color: #666666;
+            font-size: smaller;
+            text-align: center;
+            padding-left:8px ;
         }
         #inputcol{
            height: 95%;
@@ -94,6 +99,8 @@
             background-color: #febd69;
             justify-content: center;
             align-items: center;
+            border-top-left-radius: 2px;
+            border-bottom-left-radius: 2px;
         }
         #rightDiv{
             width: 29%;
