--- a/Day-15/Responsive.html
+++ b/Day-15/Responsive.html
@@ -6,10 +6,8 @@
     <title>Document</title>
     <style>
          #parent{
-            border: 4px solid black;
-            
+            border: 4px solid black; 
          }
-        
          .child{
             border: 1px solid red;
             height: 100px;
@@ -23,6 +21,9 @@
             border: 2px solid black;
          }
          #parent > div:nth-child(4) {
+            display: none;
+         }
+         #child1 div:nth-child(2){
             display: none;
          }
         @media  screen and (max-width:500px)  {
