--- a/Day-13/index.html
+++ b/Day-13/index.html
@@ -626,29 +626,32 @@
             }
 
             #filters {
-                display: none;
+                width: 26%;
             }
 
             #products {
-                width: 100%;
+                width: 70%;
                 justify-content: space-around;
             }
             
             .h-w-100 {
-                width: 50%;
+                width: 40%;
                 height: 90%;
             }
 
             .productCard {
-                width: 20%;
+                width: 30%;
             }
 
             .imgcard {
-                height: 55%;
+                height: 45%;
             }
             #logoDiv{
                 margin-right: 50%;
                 height: 100%;
+            }
+            #menu > span{
+                color: white;
             }
             
         }
