--- a/Day-13/home.html
+++ b/Day-13/home.html
@@ -529,9 +529,9 @@
             <div id="cart">
                 <!-- <span class="material-symbols-outlined">person</span>
                 <span>Login</span> -->
-                <span class="material-symbols-outlined">
+                <a href="/Day-13/addtocart.html"><span class="material-symbols-outlined">
                     shopping_cart
-                </span>
+                </span></a>
                 <span>Cart</span>
             </div>
         </div>
@@ -641,8 +641,8 @@
                 </p>
             </div>
             <div class="nest">
-                <img src="https://images-eu.ssl-images-amazon.com/images/G/31/IMG15/Irfan/GATEWAY/MSO/Appliances-QC-PC-186x116--B08345R1ZW._SY116_CB667322346_.jpg"/>
-                <p>Refrigerators</p>
+               <a href="/Day-13/index.html"> <img src="https://images-eu.ssl-images-amazon.com/images/G/31/IMG15/Irfan/GATEWAY/MSO/Appliances-QC-PC-186x116--B08345R1ZW._SY116_CB667322346_.jpg"/></a>
+               <p>Refrigerators</p>
             </div>
             <div class="nest">
                 <img src="https://images-eu.ssl-images-amazon.com/images/G/31/IMG15/Irfan/GATEWAY/MSO/Appliances-QC-PC-186x116--B07G5J5FYP._SY116_CB667322346_.jpg"/>
