--- a/Day-13/index.html
+++ b/Day-13/index.html
@@ -960,11 +960,13 @@
                 </div>
                 <div class="productCard">
                     <div class="imgcard">
-                        <img class="h-w-100" alt="ref"
-                            src="https://m.media-amazon.com/images/I/71Q46li47mL._AC_UL320_.jpg" />
+                       <a href="/Day-13/product.html"><img class="h-w-100" alt="ref"
+                            src="https://m.media-amazon.com/images/I/41UfJni5rlL._MCnd_AC_.jpg" /></a> 
                     </div>
                     <p class="proName">
-                        LG 185 L 5 Star Inverter Direct-Cool Single Door Refrigerator
+                        Haier 185 L, 2 Star, Direct-Cool Single Door Refrigerator (HED-19TGG-N, Holy Leaf Glass, 2024 Model)
+
+
                     </p>
                     <div class="ratingDiv">
                         <span class="material-symbols-outlined col-yellow">star</span>
@@ -973,17 +975,17 @@
                         <span class="material-symbols-outlined col-yellow">star</span>
                         <span class="material-symbols-outlined col-yellow">star</span>
                         <span class="material-symbols-outlined">arrow_drop_down</span>
-                        <p>5,289</p>
+                        <p>140  </p>
                     </div>
                     <div class="priceDiv">
                         <span class="material-symbols-outlined">currency_rupee</span>
-                        <p>17,345</p>
-                        <p>M.R.P:<span> ₹22,199</span></p>
+                        <p>15,190</p>
+                        <p>M.R.P:<span> ₹20,400</span></p>
                     </div>
-                    <p class="offer">(22% off)</p>
+                    <p class="offer">(-26% off)</p>
                     <p class="emi"><span style="background-color: #7fda69;">Save ₹750</span> with coupon</p>
                     <p class="delivery">
-                        FREE delivery by<b>Thu, 4 Jul, 7:00 am - 3:00 pm</b>
+                        FREE delivery by<b>Amazon</b>
                     </p>
                     <p class="install">Service: Installation</p>
                 </div>
