--- a/Day-13/product.html
+++ b/Day-13/product.html
@@ -52,7 +52,7 @@
     />
 
     <!-- footer css -->
-    <link rel="stylesheet" href="./footer.css" />
+    
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
@@ -1649,7 +1649,7 @@
           <div id="logoDiv">
             <img
               style="height: 78%; width: 84%"
-              src="../Images/Amazon-India-Logo-PNG-White-removebg-preview.png"
+              src="/Day-13/Amazon-India-Logo-PNG-White-removebg-preview.png"
               alt="Amazon"
             />
           </div>
