--- a/Day-13/addtocart.html
+++ b/Day-13/addtocart.html
@@ -703,10 +703,10 @@
             <div id="cart">
                 <!-- <span class="material-symbols-outlined">person</span>
                 <span>Login</span> -->
-                <span class="material-symbols-outlined">
+                <a href="/Day-13/addtocart.html"> <span class="material-symbols-outlined">
                     shopping_cart
-                </span>
-                <span>Cart</span>
+                </span></a>
+               <span>Cart</span>
             </div>
         </div>
     </div>
